rollouts-legacy/v1/rollout-provider.yaml
kind: Rollout
apiVersion: argoproj.io/v1alpha1
metadata:
  name: dubbo3-provider-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dubbo3-provider
  template:
    metadata:
      labels:
        app: dubbo3-provider
        sidecar.istio.io/inject: "true"
        version: v1
    spec:
      containers:
        - name: container-1
          image: release-ci.daocloud.io/mspider/spring-dubbo3-provider:v0.2
          resources:
            limits:
              cpu: 250m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 512Mi
  strategy:
    canary:
      trafficRouting:
      canaryService: dubbo3-provider-canary
      stableService: dubbo3-provider
        managedRoutes:
          - name: test-v2
        istio:
          virtualService:
            name: provider
            routes:
              - test-v1
      steps:
        - setCanaryScale:
            weight: 100
        - setHeaderRoute:
            name: test-v2
            match:
            - headerName: lane
              headerValue:
                exact: test-v2
        - setWeight: 100
        - pause: {}
